# registry-tabby

./: Cargo.toml  Makefile  README.md  models.json
generator/: Cargo.toml
generator/src/: main.rs  model.rs
generator/src/ollama/: mod.rs
generator/src/ollama/v2/: manifest.rs  mod.rs
meta/: README.tmpl.md  models.yaml
